--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Search</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -16,8 +16,11 @@
         <a href="search.html">Search</a>
     </nav>
     <main>
-        <h1>Welcome to the Improved Website</h1>
-        <p>Navigate through the menu to explore games, movies, settings, and more!</p>
+        <h1>Search Engine</h1>
+        <form action="https://www.google.com/search" method="get" target="_blank">
+            <input type="text" name="q" placeholder="Search here..." required>
+            <button type="submit">Search</button>
+        </form>
     </main>
 </body>
 </html>
