fixing up the site :)))

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/script.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a href="movies.html">Movies</a>
-        <a href="settings.html">Settings</a>
-        <a href="search.html">Search</a>
+        <a href="/index.html">Home</a>
+        <a href="/pages/games.html">Games</a>
+        <a href="/pages/methods.html">methods</a>
+        <a href="/pages/settings.html">Settings</a>
+        <a href="/pages/search.html">Search</a>
     </nav>
     <main>
-        <h1>Welcome to the Improved Website</h1>
-        <p>Navigate through the menu to explore games, movies, settings, and more!</p>
+        <h1>Welcome to RemorseUB</h1>
+        <p>Navigate through the menu to explore games, methods, and more!</p>
     </main>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <div id="particles-home"></div>
+
 </body>
 </html>
