--- a/pages/search.html
+++ b/pages/search.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/script.js" defer></script>
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a href="movies.html">Movies</a>
-        <a href="settings.html">Settings</a>
-        <a href="search.html">Search</a>
+        <a href="/index.html">Home</a>
+        <a href="/pages/games.html">Games</a>
+        <a href="/pages/methods.html">methods</a>
+        <a href="/pages/settings.html">Settings</a>
+        <a href="/pages/search.html">Search</a>
     </nav>
     <main>
         <h1>Search Engine</h1>
@@ -22,5 +22,7 @@
             <button type="submit">Search</button>
         </form>
     </main>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <div id="particles-home"></div>
 </body>
 </html>
