--- a/pages/methods.html
+++ b/pages/methods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies</title>
+    <title>Methods</title>
     <link rel="stylesheet" href="/styles.css">
     <script src="/script.js" defer></script>
 </head>
@@ -16,7 +16,7 @@
         <a href="/pages/search.html">Search</a>
     </nav>
     <main>
-        <h1>Movies</h1>
+        <h1>Methods</h1>
         <div class="iframe-container">
             <!-- Box 1 -->
             <div class="iframe-box">
