--- a/pages/settings.html
+++ b/pages/settings.html
@@ -41,7 +41,7 @@
             </select>
         </div>
         <div class="settings-container">
-            <p> test:</p>
+            <p> test</p>
 
         </div>
     </main>
