--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav>
+        <button>open in about:blank</button> 
         <a href="/index.html">Home</a>
         <a href="/pages/games.html">Games</a>
         <a href="/pages/methods.html">methods</a>
@@ -21,6 +22,30 @@
     </main>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <div id="particles-home"></div>
+ <script>
+        var urlObj = new window.URL(window.location.href);
+        var url = "https://arlo-ub.github.io/";
+        var win;
 
+        document.querySelector('button').onclick = function() {
+            if (win) {
+                win.focus();
+            } else {
+                win = window.open();
+                win.document.body.style.margin = '0';
+                win.document.body.style.height = '100vh';
+                var iframe = win.document.createElement('iframe');
+                iframe.style.border = 'none';
+                iframe.style.width = '100%';
+                iframe.style.height = '100%';
+                iframe.style.margin = '0';
+                iframe.src = url;
+                win.document.body.appendChild(iframe);
+            }
+            document.querySelector('button').style.background = 'grey';
+            document.querySelector('button').innerHTML = "refresh page to open again";
+        };
+    </script>
 </body>
+    
 </html>
